--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     name: Python ${{ matrix.python-version }}
     strategy:
+      fail-fast: false
       matrix:
         python-version:
           - "3.7"
