--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,4 +32,4 @@ jobs:
       - name: Start the Flask server for our tests in the background
         run: python -m tests.test_server &
       - name: Run tests
-        run: pytest --ignore=tests/functional/test_functional.py --ignore=tests/test_server.py --cov requests_ntlm --cov-report term-missing tests
+        run: pytest --ignore=tests/functional/test_functional.py --ignore=tests/test_server.py --cov httpx_ntlm --cov-report term-missing tests
